--- a/css/css.css
+++ b/css/css.css
@@ -67,6 +67,7 @@ a{
     box-shadow: -3px 0px 5px rgba(0,0,0,0.05);
     transition: 0.5s;
     overflow-y: hidden;
+    z-index: 1;
 }
 .ham-nav-section.on{
     width: 50%;
@@ -118,7 +119,7 @@ a{
 /*pc header section*/
 .pc-header-section{
     width: 100%;
-    height: 70px;    
+    height: 80px;    
     box-shadow: 0px 3px 3px rgba(0,0,0,0.05);
     white-space: nowrap;
     display: none;
@@ -201,6 +202,7 @@ a{
     margin: 10px 0;
     display: flex;
     align-items: center;
+    justify-content: center;
    
 }
 .writer-infor{
@@ -338,6 +340,7 @@ a{
    
 }
 
+/*footer*/
 .footer-img-section{
     text-align: center;
 }
@@ -348,6 +351,7 @@ a{
     display: flex;
     align-items: center;
     justify-content: space-around;
+    font-size: 14px;
 }
 .footer-fnb-li{}
 .footer-fnb-li>a{}
@@ -361,6 +365,7 @@ a{
 }
 .company-li{
     margin: 3px 0;
+    font-size: 12px;
 }
 
 @media screen and (min-width:700px){
@@ -526,7 +531,8 @@ a{
     .advertisement-section{
         /* width: 100%;
         text-align: center;
-        margin: 30px 0; */
+        */
+        margin: 0 ; 
     }
     .advertisement-img{
         width: 30%;
@@ -697,6 +703,8 @@ a{
         width: 90px;
     }
     .footer-fnb-ul{
+        width: 25%;
+        margin: 0 auto;
         display: flex;
         align-items: center;
         justify-content: space-around;
