--- a/css/boardList.css
+++ b/css/boardList.css
@@ -34,6 +34,12 @@ a{
     background: #fff;
     box-shadow: 0px 3px 3px rgba(0,0,0,0.05);
 }
+.mobile-header-section.on{
+    position: fixed;
+    top: 0;
+    left: 0;
+    transition: 0.5s;;
+}
 .mobile-logo-section{
     margin: 0 10px;
 }
@@ -121,9 +127,18 @@ a{
 .pc-header-section{
     width: 100%;
     height: 80px;    
+    background: #fff;
     box-shadow: 0px 3px 3px rgba(0,0,0,0.05);
     white-space: nowrap;
     display: none;
+    z-index: 1;
+}
+
+.pc-header-section{
+    position: fixed;
+    top: 0;
+    left: 0;
+    transition: 0.5s;;
 }
 .container{
     width: 90%;
@@ -183,6 +198,11 @@ a{
     width: 100%;
     text-align: center;
     margin: 30px 0;
+}
+
+.advertisement-section>a{
+    display: inline-block;
+    width: 100%;
 }
 .advertisement-img{
     width: 65%;
@@ -463,7 +483,8 @@ a{
     }
 
     .advertisement-section{
-        margin: 15px auto; 
+        margin: 0;
+        margin-top: 80px;  
     }
     .advertisement-img{
         width: 30%;
@@ -504,6 +525,9 @@ a{
     }
     .border-infor-section{
         font-size: 15px;
+    }
+    .border-detail{
+        max-width: 700px;
     }
     .paging-ul{
         width: 40%;
